fixed h2 spacing issue

--- a/css/index.css
+++ b/css/index.css
@@ -220,6 +220,10 @@ footer {
 		padding-bottom:15px;
 	}
 
+	.bottom-text .services h2{
+		margin-top: -35px;
+	}
+
 	footer{
 		display:flex;
 		justify-content:center;
